  * Fix a rare crash while syncing server-side changes missing checksums.
  * Fix a race-condition that caused uploaded files to occasionally be replaced by a 0-byte 
    copy (most commonly caused by the way LibreOffice saves files).
  * Cap number of uploads that can be in-progress at any time to 5. This makes uploading 
    uploading directories with lots of files appear to go a bit faster.
 
 -- Jeff Stafford <jeff.stafford@protonmail.com>  Sun, 16 May 2021 01:40:00 -0400

onedriver (0.9.2-1) focal; urgency=low

  * Adds fix for server-side update to Microsoft's authentication APIs.
  * Fix a crash on auth renewal after computer suspend or other network interruption.

 -- Jeff Stafford <jeff.stafford@protonmail.com>  Tue, 29 Sep 2020 20:50:00 -0400

onedriver (0.9.1-1) focal; urgency=low

  * Filenames are now sanitized when uploading new files.
  * onedriver now only syncs metadata changes for a file from server to client if its
    contents have changed as well. This means that programs like LibreOffice will no longer
    complain about their lockfiles being updated while saving.

 -- Jeff Stafford <jeff.stafford@protonmail.com>  Sat, 6 Jun 2020 12:18:00 -0400

onedriver (0.9.0-1) unstable; urgency=low

  * Multiple OneDrive drives can now be mounted simultaneously via systemd.
  * Uploads are now retried, with failed uploads retried automatically.
  * In-progress uploads are now cached on disk and resumed the next time onedriver starts
    if the upload is terminated prematurely (for instance, if a user shuts down their computer)
  * All uploads are now verified against checksums of their local content.

 -- Jeff Stafford <jeff.stafford@protonmail.com>  Wed, 3 Jun 2020 18:29:00 -0400

onedriver (0.8.0-1) unstable; urgency=low

  * Add a desktop launcher for single drive scenarios (better multi-drive support coming soon!).
  * Fix for directories containing more than 200 items.
  * Miscellaneous fixes and tests for OneDrive for Business