@@ -17,11 +17,13 @@ import (
 
 // Fetch the auth code required as the first part of oauth2 authentication. Uses
 // webkit2gtk to create a popup browser.
-func getAuthCode() string {
+func getAuthCode(accountName string) string {
 	cAuthURL := C.CString(getAuthURL())
-	cResponse := C.webkit_auth_window(cAuthURL)
+	cAccountName := C.CString(accountName)
+	cResponse := C.webkit_auth_window(cAuthURL, cAccountName)
 	response := C.GoString(cResponse)
 	C.free(unsafe.Pointer(cAuthURL))
+	C.free(unsafe.Pointer(cAccountName))
 	C.free(unsafe.Pointer(cResponse))
 
 	code, err := parseAuthCode(response)
