@@ -1,3 +1,3 @@
 #pragma once
 
-char *webkit_auth_window(char *auth_url);
+char *webkit_auth_window(char *auth_url, char *account_name);
